# refactoring-to-patterns-kata

./: Makefile  README.md  pyproject.toml
src/refactoring_to_patterns/command_pattern/: mars_rover.py
src/refactoring_to_patterns/compose_method/: list.py
src/refactoring_to_patterns/creation_method/: product_package.py
tests/test_command_pattern/: test_mars_rover.py
tests/test_compose_method/: test_list.py
tests/test_creation_method/: test_product_package.py
