[project]
name = "refactoring_to_patterns"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "dimanu-py", email = "diegomtz126@gmail.com"},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "expects>=0.9.0",
    "pytest>=8.3.3",
]
linter = [
    "mypy>=1.11.2",
    "black>=24.8.0",
]
